--- a/node16/react-frontend-restify/src/App.css
+++ b/node16/react-frontend-restify/src/App.css
@@ -2,12 +2,8 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-  
+  /* text-align: center; */
   background-color: brown;
-  /* display: grid;
-  flex-direction: column; */
-
 }
 
 
